--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.5.1",
     "leaflet": "^1.6.0",
     "leaflet-draw": "^1.0.4",
+    "leaflet.heat": "^0.2.0",
     "mongodb": "^3.5.8"
   }
 }
